# cafeconleche

./: .gitignore  Cargo.toml  README.md
cafeconleche-controller/: Cargo.toml
cafeconleche-server/: Cargo.toml
cafeconleche-server/src/: main.rs
cafeconleche-ui/: app.json  package-lock.json  package.json
cafeconleche-ui/app/(tabs)/: _layout.tsx  index.tsx  settings.tsx
hardware/: hardware.kicad_pro
