[package]
name = "cafeconleche-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rocket = "0.4.11"

[dependencies.rocket_contrib]
default-features = false
features = ["json"]
